@@ -122,6 +122,8 @@ Release 0.19.0 - Unreleased
    HBASE-1098  IllegalStateException: Cannot set a region to be closed it it
                was not already marked as closing
    HBASE-1100  HBASE-1062 broke TestForceSplit
+   HBASE-1191  shell tools -> close_region does not work for regions that did
+               not deploy properly on startup
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
